# fastapi-study

./: .gitattributes  .gitignore  README.md  build.py  pyproject.toml  python_study.py  spa.py
fastapi_study/: api.py  app.py  spa.py
fastapi_study/ui/: .gitignore  angular.json  package-lock.json
src/fastapi_study/: __init__.py
src/fastapi_study/ui/: angular.json  package-lock.json  package.json
