[project]
name = "fastapi-study"
version = "1.0.0-dev.0"
description = "A study of Python, uv, FastAPI, Angular"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Alexei Yashkov", email = "alexei.yashkov@yashkov.org" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[dependency-groups]
dev = [
    "coverage >=7.8.0",
    "pyclean >=3.1.0",
    "pytest >=8.3.5"
]

[project.scripts]
fastapi-study = "fastapi_study.app:main"

[build-system]
requires = ["hatchling >=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
exclude = [
    "fastapi_study/ui/.*",
    "fastapi_study/ui/public",
    "fastapi_study/ui/src",
    "fastapi_study/ui/*.json"
]
